syntax = "proto3";

package nupi.api.v1;

option go_package = "github.com/nupi-ai/nupi/internal/api/grpc/v1;v1";

import "google/protobuf/timestamp.proto";

// AdapterRuntime exposes runtime metadata for an adapter process.
message AdapterRuntime {
  string adapter_id = 1;
  string health = 2;
  string message = 3;
  google.protobuf.Timestamp started_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  map<string, string> extra = 6;
}

// AdapterEntry mirrors adapter binding status together with runtime info.
message AdapterEntry {
  string slot = 1;
  optional string adapter_id = 2;
  string status = 3;
  string config_json = 4;
  google.protobuf.Timestamp updated_at = 5;
  AdapterRuntime runtime = 6;
}

// AdaptersOverviewResponse summarizes adapter slots.
message AdaptersOverviewResponse {
  repeated AdapterEntry adapters = 1;
}

// BindAdapterRequest activates an adapter for a slot.
message BindAdapterRequest {
  string slot = 1;
  string adapter_id = 2;
  string config_json = 3;
}

// AdapterSlotRequest targets a single slot for start/stop actions.
message AdapterSlotRequest {
  string slot = 1;
}

// AdapterActionResponse returns the updated binding entry.
message AdapterActionResponse {
  AdapterEntry adapter = 1;
}

// AdapterEndpointConfig describes how the daemon connects to an adapter process.
message AdapterEndpointConfig {
  string transport = 1;        // "grpc", "http", or "process"
  string address = 2;          // Network address or socket path (grpc/http)
  string command = 3;          // Executable path (process transport)
  repeated string args = 4;    // Command arguments (process transport)
  map<string, string> env = 5; // Environment variables (process transport)
}

message RegisterAdapterRequest {
  string adapter_id = 1;
  string manifest_yaml = 2;
  string source = 3;           // e.g. "marketplace", "local", "builtin"
  string version = 4;
  string type = 5;             // stt, tts, ai, vad, tunnel, tool-handler, pipeline-cleaner
  string name = 6;
  AdapterEndpointConfig endpoint = 7;
}

message RegisterAdapterResponse {
  string adapter_id = 1;
  string name = 2;
  string type = 3;
  string version = 4;
  string source = 5;
  string manifest_yaml = 6;
}

message StreamAdapterLogsRequest {
  string slot = 1;
  bool follow = 2;
  string adapter = 3;          // Optional adapter ID filter
}

// AdapterLogEntry represents a log line from an adapter process.
message AdapterLogEntry {
  google.protobuf.Timestamp timestamp = 1;
  string level = 2;
  string message = 3;
  string slot = 4;
  string adapter_id = 5;
}

// TranscriptEntry represents a speech-to-text transcript event.
message TranscriptEntry {
  google.protobuf.Timestamp timestamp = 1;
  string session_id = 2;
  string stream_id = 3;
  string text = 4;
  double confidence = 5;       // 0.0â€“1.0
  bool is_final = 6;            // true for final transcript, false for partial
}

// AdapterLogStreamEntry multiplexes log and transcript events on a single stream.
message AdapterLogStreamEntry {
  oneof payload {
    AdapterLogEntry log = 1;
    TranscriptEntry transcript = 2;
  }
}

message GetAdapterLogsRequest {
  string slot = 1;
  uint32 limit = 2;
  string adapter = 3;          // Optional adapter ID filter
}

message GetAdapterLogsResponse {
  repeated AdapterLogStreamEntry entries = 1;
}

// Adapter describes a stored adapter binary or integration.
message Adapter {
  string id = 1;
  string source = 2;
  string version = 3;
  string type = 4;
  string name = 5;
  string manifest = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// ListAdaptersResponse returns the registry of known adapters.
message ListAdaptersResponse {
  repeated Adapter adapters = 1;
}

// AdapterBinding represents a slot -> adapter assignment.
message AdapterBinding {
  string slot = 1;
  string adapter_id = 2;
  string status = 3;
  string config_json = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// ListAdapterBindingsResponse enumerates bindings for every slot.
message ListAdapterBindingsResponse {
  repeated AdapterBinding bindings = 1;
}

// SetAdapterBindingRequest assigns an adapter to a slot.
message SetAdapterBindingRequest {
  string slot = 1;
  string adapter_id = 2;
  string config_json = 3;
}

// ClearAdapterBindingRequest removes the adapter assignment for a slot.
message ClearAdapterBindingRequest {
  string slot = 1;
}
